--- a/Homework1/Question1/makefile
+++ b/Homework1/Question1/makefile
@@ -1,11 +1,9 @@
-CXX = g++
-
 CXXFLAGS = -Wall -g
 
-all: $(Q1_floatbench)
+all: Q1_floatbench
 
-$(Q1_floatbench): $(Q1_floatbench.cpp)
-    $(g++) $(CXXFLAGS) -o $(Q1_floatbench) $(Q1_floatbench.cpp)
+Q1_floatbench: Q1_floatbench,cpp
+    g++ CXXFLAGS -o Q1_floatbench Q1_floatbench.cpp
 
 clean:
-    rm -f $(Q1_floatbench)
+    rm Q1_floatbench
