--- a/Homework1/Question1/makefile
+++ b/Homework1/Question1/makefile
@@ -2,7 +2,7 @@ CXXFLAGS = -Wall -g
 
 all: Q1_floatbench
 
-Q1_floatbench: Q1_floatbench,cpp
+Q1_floatbench: Q1_floatbench.cpp
     g++ CXXFLAGS -o Q1_floatbench Q1_floatbench.cpp
 
 clean:
