--- a/Homework1/Question1/makefile
+++ b/Homework1/Question1/makefile
@@ -1,9 +1,7 @@
-CXXFLAGS = -Wall -g
-
 all: Q1_floatbench
 
 Q1_floatbench: Q1_floatbench.cpp
-	g++ CXXFLAGS -o Q1_floatbench Q1_floatbench.cpp
+	g++ -Wall -g -o Q1_floatbench Q1_floatbench.cpp
 
 clean:
 	rm Q1_floatbench
