--- a/Homework1/Question1/makefile
+++ b/Homework1/Question1/makefile
@@ -6,5 +6,8 @@ Q1_floatbench: Q1_floatbench.cpp
 Q1_matrixbench: Q1_matrixbench.cpp
 	g++ -Wall -g -o Q1_matrixbench Q1_matrixbench.cpp
 
+Q1_intbench: Q1_intbench.cpp
+	g++ -Wall -g -o Q1_intbench Q1_intbench.cpp
+
 clean:
-	rm Q1_floatbench Q1_matrixbench
+	rm Q1_floatbench Q1_matrixbench Q1_intbench
