--- a/Homework1/Question1/makefile
+++ b/Homework1/Question1/makefile
@@ -1,7 +1,10 @@
-all: Q1_floatbench Q1_matrixbench Q1_intbench
+all: Q1_floatbench Q1_floatO2 Q1_matrixbench Q1_intbench
 
 Q1_floatbench: Q1_floatbench.cpp
 	g++ -Wall -g -o Q1_floatbench Q1_floatbench.cpp
+
+Q1_floatO2: Q1_floatbench.cpp
+	g++ -Wall -g -O2 -o Q1_floatO2 Q1_floatbench.cpp
 
 Q1_matrixbench: Q1_matrixbench.cpp
 	g++ -Wall -g -o Q1_matrixbench Q1_matrixbench.cpp
