--- a/Homework1/Question2/makefile
+++ b/Homework1/Question2/makefile
@@ -1,7 +1,7 @@
 all: Q2_PthreadSort
 
 Q2_PthreadSort:
-	g++ -pthread -o Q2_PthreadSort Q2_PthreadSort.cpp
+	g++ -lpthread -o Q2_PthreadSort Q2_PthreadSort.cpp
 
 clean:
 	rm Q2_PthreadSort
