Most of Q2, Q1 Leibniz

--- a/Homework2/Question1/makefile
+++ b/Homework2/Question1/makefile
@@ -1,7 +1,10 @@
-all: Q1_omp
+all: Q1_omp Q1_leibniz
 
 Q1_omp:
 	g++ -fopenmp -o Q1_omp Q1_omp.cpp
+
+Q_leibniz:
+	g++ -o Q1_leibniz Q1_leibniz.cpp
 
 clean:
 	rm Q1_omp
