--- a/Homework2/Question1/makefile
+++ b/Homework2/Question1/makefile
@@ -1,10 +1,13 @@
-all: Q1_omp Q1_leibniz
+all: Q1_omp Q1_leibniz Q1_pthread
 
 Q1_omp:
 	g++ -fopenmp -o Q1_omp Q1_omp.cpp
 
 Q_leibniz:
 	g++ -o Q1_leibniz Q1_leibniz.cpp
+
+Q1_pthread:
+	g++ -o Q1_pthread Q1_pthread.cpp
 
 clean:
 	rm Q1_omp
