Fixed Q1 makefile for compiler flags

--- a/Homework2/Question1/makefile
+++ b/Homework2/Question1/makefile
@@ -4,10 +4,10 @@ Q1_omp:
 	g++ -fopenmp -o Q1_omp Q1_omp.cpp
 
 Q_leibniz:
-	g++ -o Q1_leibniz Q1_leibniz.cpp
+	g++ -fopenmp -o Q1_leibniz Q1_leibniz.cpp
 
 Q1_pthread:
-	g++ -o Q1_pthread Q1_pthread.cpp
+	g++ -lpthread -o Q1_pthread Q1_pthread.cpp
 
 clean:
 	rm Q1_omp
