--- a/Homework2/Question1/makefile
+++ b/Homework2/Question1/makefile
@@ -3,7 +3,7 @@ all: Q1_omp Q1_leibniz Q1_pthread
 Q1_omp:
 	g++ -fopenmp -o Q1_omp Q1_omp.cpp
 
-Q_leibniz:
+Q1_leibniz:
 	g++ -fopenmp -o Q1_leibniz Q1_leibniz.cpp
 
 Q1_pthread:
