Q2_alt and updated READMEs

--- a/Homework2/Question2/makefile
+++ b/Homework2/Question2/makefile
@@ -1,7 +1,10 @@
-all: Q2
+all: Q2 Q2_alt
 
 Q2:
 	g++ -lpthread -o Q2 Q2.cpp
 
+Q2_alt:
+	g++ lpthread -o Q2_alt Q2_alt.cpp
+
 clean:
-	rm Q2
+	rm Q2 Q2_alt
