--- a/Homework2/Question2/makefile
+++ b/Homework2/Question2/makefile
@@ -4,7 +4,7 @@ Q2:
 	g++ -lpthread -o Q2 Q2.cpp
 
 Q2_alt:
-	g++ lpthread -o Q2_alt Q2_alt.cpp
+	g++ -lpthread -o Q2_alt Q2_alt.cpp
 
 clean:
 	rm Q2 Q2_alt
