Extra credit makefile fix

--- a/Loop Blocking Extra Credit/makefile
+++ b/Loop Blocking Extra Credit/makefile
@@ -6,10 +6,10 @@ MM_openMP:
 MM_block:
 	g++ -o MM_block MM_block.cpp
 
-MM_no_block
+MM_no_block:
 	g++ -o MM_no_block MM_no_block.cpp
 
-MM_no_block_openMP
+MM_no_block_openMP:
 	g++ -fopenmp -o MM_no_block_openMP MM_no_block_openMP.cpp
 
 clean:
