--- a/Homework4/Question2/makefile
+++ b/Homework4/Question2/makefile
@@ -1,7 +1,9 @@
-All: Q2
+All: Q2_32bins Q2_128bins
 
-Q2:
-	mpiCC -o Q2 Q2.cpp
+Q2_32bins:
+	mpiCC -o Q2_32bins Q2_32bins.cpp
 
+Q2_128bins:
+	mpiCC -o Q2_128bins Q2_128bins.cpp
 clean:
-	rm Q2
+	rm Q2_32bins Q2_128bins
