--- a/Homework5/Question2/makefile
+++ b/Homework5/Question2/makefile
@@ -1,4 +1,4 @@
-all: Q2 Q2_tiled
+all: Q2 Q2_tiled Q2_opt
 
 Q2:
 	nvcc -o Q2 Q2.cpp stencil.cu
@@ -6,5 +6,8 @@ Q2:
 Q2_tiled:
 	nvcc -o Q2_tiled Q2.cpp tiled_stencil.cu
 
+Q2_opt:
+	nvcc -o Q2_opt Q2.cpp opt_stencil.cu
+
 clean:
-	rm Q2 Q2_tiled
+	rm Q2 Q2_tiled Q2_opt
